Tests green. Airport added. land(plane) functionality implemented.

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,11 +12,13 @@
   <script src="lib/jasmine-2.3.4/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/FizzBuzz.js"></script>
+  <script src="src/plane.js"></script>
+  <script src="src/airport.js"></script>
 
 
   <!-- include spec files here... -->
-  <script src="spec/FizzBuzzSpec.js"></script>
+  <script src="spec/airportspec.js"></script>
+  <script src="spec/planespec.js"></script>
 
 
 </head>
